# reactchat

./: README.md
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/api/: middleware.py  rag.py  routes.py  server.py
backend/api/routes/: auth.py  chat.py  ingest.py  repo.py  validate.py
backend/db/: config.py  models.py  pinecone.py
backend/db/alembic/: env.py
backend/db/alembic/versions/: 157764184261_remove_url_foreign_key.py  179144f7bba8_on_delete_cascade.py  66105121c6a1_changed_file_tree_to_repo_info.py  788057e6e1c7_revise_repos_table_to_chats.py  7b264eed2a3d_added_fields_for_progress_bar.py  7d10d40621e2_remove_public.py  860cc9f942ef_add_is_bookmarked.py  9e0409c3aced_move_to_pinecone.py  a8d37e161626_revision_to_embeddings_table.py  aa875175dcc9_more_revisions_to_tables.py  b9b21f23fd29_add_repo_table.py  e43d6834b174_initial_migration.py  ef64fbe837b0_add_embeddings_table.py
frontend/: .env.example  bun.lockb  drizzle.config.ts  next.config.ts  package.json  tsconfig.json
frontend/src/: env.js  env.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/recents/: page.tsx
frontend/src/components/: header.tsx  page-wrapper.tsx  recents.tsx  search-bar.tsx  theme-toggle.tsx  user-dropdown.tsx
frontend/src/components/core/: chat-input.tsx  chat-nav.tsx  chat.tsx  code.tsx  file-tree-item.tsx  file-tree.tsx  layout-helper.tsx  messages.tsx  (+1 more)
frontend/src/constants/: index.ts
frontend/src/lib/: client-fetch.ts  db.ts  server-fetch.ts  types.ts
frontend/src/styles/: globals.css
(+5 files in other folders)
