[project]
name = "backend"
version = "0.1.0"
description = "backend for reactchat"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "clerk-backend-api>=1.8.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "gitingest>=0.1.4",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-openai>=0.3.10",
    "pinecone>=6.0.2",
    "psycopg2-binary>=2.9.10",
    "svix>=1.62.0",
    "uvicorn>=0.34.0",
]
